	to Debugger() call.
	* kern/lock_mon.c (retry_simple_lock, retry_bit_lock): Likewise.
	* kern/machine.c (Debugger): Remove declaration.
	* device/net_io.c (net_deliver): Fix parenthesis to really round up.
	* kern/mach_clock.c (timeout): Make the `fcn' parameter take a void *
	instead of char *.
	* kern/mach_clock.h (timeout): Likewise.

2008-07-19  Barry deFreese  <bddebian@comcast.net>

	* device/dev_hdr.h (dev_name_lookup, dev_set_indirection): Add
	prototypes.
	* device/dev_pager.c: Include <vm/vm_user.h>.
	* device/ds_routines.c: Likewise.
	* device/subrs.c: Likewise.
	* device/device_init.c: Include <device/tty.h>.
	* device/ds_routines.h (iowait): Add prototype.
	* device/net_io.h (net_kmsg_collect): Add prototype.
	* device/net_io.c (hash_ent_remove, net_free_dead_infp,
	net_free_dead_entp, bpf_validate, bpf_eq, net_add_q_info,
	bpf_match): Add forward declarations.
	* device/subrs.h: New header.
	* i386/i386/fpu.h: Include <sys/types.h>.
	Change <i386/thread.h> include to <kern/thread.h>.
	(fp_save, fp_load, fp_free, fpu_module_init, fpu_set_state, 
	fpu_get_state, fpnoextflt, fpextovrflt, fpexterrflt, init_fpu):
	Add prototypes.
	* i386/i386/gdt.h (gdt_init): Add prototype.
	* i386/i386/io_map.c: Include <vm/pmap.h>.
	* vm/vm_kern.c: Likewise.
	* i386/i386/ktss.h (ktss_init): Add prototype.
	* i386/i386/ldt.h (ldt_init): Add prototype.
	* i386/i386/loose_ends.h: New header.
	* i386/i386/loose_ends.c (delay): Complete prototype.
	* i386/i386/model_dep.h (startrtclock): Add prototype.
	* i386/i386/pcb.h (load_context, stack_attach, stack_detach, 
	switch_ktss): Add prototypes.
	* i386/i386/pic.h (form_pic_mask, picinit): Add prototypes.
	* i386/i386/pit.c: Include <i386/pic.h>.
	* i386/i386at/kd_mouse.c: Likewise.
	* i386/i386/pit.h (clkstart): Add prototype.
	* i386/i386/trap.c: Include <i386/fpu.h>, <intel/read_fault.h>,
	<vm/vm_fault.h>.
	* i386/i386/trap.h (interrupted_pc): Add prototype.
	* i386/i386/user_ldt.c: Include <i386/pcb.h>.